--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+    margin-top: 100px;
 
     img {
       border-radius: 5px;
