--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,11 @@
   background: @nav-bg;
   border-bottom: @nav-border;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: .9;
+
 
   .nav-content {
     max-width: 800px;
